--- a/env/.env_default
+++ b/env/.env_default
@@ -4,7 +4,7 @@ DJ_SU_PASSWORD=
 
 DJ_SECRET_KEY=
 
-DJ_DEBUG=0
+DJ_DEBUG=0 # int(os.environ.get('DJ_DEBUG', False))
 DJ_ALLOWED_HOSTS=
 
 POSTGRES_USER=
