--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ django = "==4.1.2"
 environ = "==1.0"
 dj-database-url = "==1.0"
 django-environ = "==0.9.0"
+psycopg2 = "==2.9.4"
 
 [dev-packages]
 
